[package]
name = "whiteout"
version = "0.1.0"
authors = ["SilverWingedSeraph <lfstindall@gmail.com>"]

description = "Provides macros that erase the type of any value into an impl Trait for a given trait."

repository = "https://github.com/LeoTindall/whiteout"

keywords = ["impl_trait", "types", "erasure", "macros"]

license = "MIT"
